--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,16 +3,16 @@
 # Contributor Sefa Eyeoglu <contact@scrumplex.net>
 
 pkgname=libquotient
-pkgver=0.6.11
+pkgver=0.7.0
 pkgrel=1
 pkgdesc='A Qt library to write cross-platform clients for Matrix'
 license=(LGPL)
 arch=(x86_64)
 url='https://matrix.org/docs/projects/sdk/quotient'
-depends=(qt5-multimedia)
+depends=(qt5-multimedia qtkeychain-qt5)
 makedepends=(cmake)
 source=(https://github.com/quotient-im/libQuotient/archive/$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('12b15d1296e630477d5e8f4d32c821dc724b3c5b99d15d383417ba7d88f03c46')
+sha256sums=('2e46a9889c2ce86b780f04b0b831896179af6621177f805c1a650a980e041525')
 
 build() {
   cmake -B build -S libQuotient-$pkgver \
