upgpkg: neochat 22.11-2: libquotient 0.7 rebuild, build man pages
git-svn-id: file:///srv/repos/svn-community/svn@1363766 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,14 +3,14 @@
 
 pkgname=neochat
 pkgver=22.11
-pkgrel=1
+pkgrel=2
 pkgdesc='A client for matrix, the decentralized communication protocol'
 license=(GPL3)
 arch=(x86_64)
 url='https://apps.kde.org/neochat'
 depends=(qqc2-desktop-style kirigami-addons
          libquotient kquickimageeditor kitemmodels kio syntax-highlighting qtkeychain-qt5 cmark hicolor-icon-theme)
-makedepends=(extra-cmake-modules qcoro-qt5)
+makedepends=(extra-cmake-modules qcoro-qt5 kdoctools)
 source=(https://download.kde.org/stable/plasma-mobile/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
 sha256sums=('25362be430c930ff6d964a69a19b49d53043c2789a34893c61ab00ce619ad0be'
             'SKIP')
