--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -3,14 +3,14 @@
 
 pkgname=neochat
 pkgver=22.11
-pkgrel=1
+pkgrel=2
 pkgdesc='A client for matrix, the decentralized communication protocol'
 license=(GPL3)
 arch=(x86_64)
 url='https://apps.kde.org/neochat'
 depends=(qqc2-desktop-style kirigami-addons
          libquotient kquickimageeditor kitemmodels kio syntax-highlighting qtkeychain-qt5 cmark hicolor-icon-theme)
-makedepends=(extra-cmake-modules qcoro-qt5)
+makedepends=(extra-cmake-modules qcoro-qt5 kdoctools)
 source=(https://download.kde.org/stable/plasma-mobile/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
 sha256sums=('25362be430c930ff6d964a69a19b49d53043c2789a34893c61ab00ce619ad0be'
             'SKIP')
